Change to use fint-flyt-kafka for instance flow headers

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,7 @@
 fint:
-  org-id: fintlabs.no
   kafka:
+    topic:
+      org-id: fintlabs.no
     application-id: fint-skjema-case-history-service
 spring:
   kafka:
