--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,8 @@ dependencies {
     //implementation 'org.apache.kafka:kafka-streams'
     implementation 'org.springframework.kafka:spring-kafka:2.8.3'
 
-   implementation 'no.fintlabs:fint-kafka:1.9.0'
+    implementation 'no.fintlabs:fint-kafka:2.0.0'
+    implementation 'no.fintlabs:fint-flyt-kafka:0.0.2'
 
     runtimeOnly 'org.postgresql:postgresql'
 
