--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,1 +1,27 @@
-
+fint:
+  kafka:
+    topic:
+      org-id: fintlabs.no
+    application-id: fint-skjema-case-history-service
+spring:
+  kafka:
+    bootstrap-servers: localhost:29092
+    consumer:
+      group-id: fint-skjema-case-history-service
+  datasource:
+    url: jdbc:postgresql://localhost:5432/fint-skjema-case-history-service-postgres
+    username: postgres
+    password: password
+  jpa:
+    properties:
+      hibernate:
+        jdbc:
+          lob:
+            non_contextual_creation: true
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        enable_lazy_load_no_trans: true
+    hibernate:
+      ddl-auto: update
+server:
+  port: 8084
+generateTestData: false
